# tap-open-meteo

./: .env.example  CLAUDE.md  LICENSE  PROMPT.md  README.md  meltano.yml  pyproject.toml
.github/workflows/: build.yml  test.yml
tap_open_mateo/: __init__.py  __main__.py  client.py  helpers.py  tap.py
tap_open_mateo/streams/: __init__.py  air_quality_streams.py  climate_streams.py  ensemble_streams.py  flood_streams.py  forecast_streams.py  historical_forecast_streams.py  historical_streams.py  marine_streams.py  satellite_streams.py  seasonal_streams.py  utility_streams.py
tests/: __init__.py  find_invalid_vars.py  schema_validation_results.json  test_core.py  test_production_quality.py  validate_schemas_against_api.py
